# CompiladorToJsonForUnity

./: .gitignore  CMakeLists.txt
Plantilla-Unity-NPC/DialogSystem/: DialogueExecutor.cs  DialogueExecutorMultiple.cs  NPCDataTypes.cs
Plantilla-Unity-NPC/GameLogic/: DetectoNPC.cs  Jugador.cs  JugadorMovimiento.cs
Plantilla-Unity-NPC/Resources/: comerciante.json  herrero.json  npc.json  vendedor.json
Plantilla-Unity-NPC/Scripts/: CameraController.cs  NPCController.cs  PlayerController.cs  PlayerInventory.cs
samples/: comerciante.npc  comerciante_corregido.npc  herrero.npc  prueba_duplicadas.npc  prueba_validacion.npc  vendedor.npc
src/: CMakeLists.txt  analizadorLex.cpp  analizadorSint.cpp  arbolSint.cpp  compilador.cpp  generadorJson.cpp  main.cpp
src/analizadores/: analizadorLex.cpp  analizadorSem.cpp  analizadorSint.cpp
src/include/: analizadorLex.h  analizadorSint.h  arbolSint.h  compilador.h  generdorJson.h  token.h
src/include/analizadores/: analizadorLex.h  analizadorSem.h  analizadorSint.h
src/include/contenedores/: ast.h  token.h
template-integracion-unity/: NPCManager.cs
template-integracion-unity/DialogSystem/: DialogueExecutor.cs  NPCDataTypes.cs  NPCParse.cs
template-integracion-unity/GameLogic/: NPCGameLogic.cs
